# lobby

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: __init__.py  cli.py
backend/api/: __init__.py  audio.py  chat.py  clip.py  highlight.py  live.py  main.py  models.py  obs.py  recording.py  scene.py  subtitle.py  thumbnail.py  vrm.py  websocket.py
backend/core/: __init__.py  audio_manager.py  avatar.py  clip.py  config.py  emotion.py  highlight.py  live2d.py  live_subtitle.py  openclaw.py  pipeline.py  scene.py  subtitle.py  subtitle_translator.py  thumbnail.py  tts.py  video.py  vrm.py
backend/integrations/: __init__.py  obs.py  test_twitch.py  test_youtube.py  twitch.py  youtube.py
backend/modes/: live.py  (+2 more)
config/: lobby.yaml  tts.yaml
docs/: API_REFERENCE.md  DESIGN.md  GETTING_STARTED.md  OPEN_LLM_VTUBER_ANALYSIS.md  TUTORIAL.md  WEB_UI_DESIGN.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: sample.txt
tests/: __init__.py  test_audio_manager.py  test_avatar.py  test_bgm.py  test_cli_config.py  test_cli_export.py  test_cli_init.py  test_clip.py  test_config.py  test_doctor.py  test_emotion.py  test_integration_live.py  test_live2d.py  test_pipeline.py  test_recording.py  test_recording_api.py  test_scene.py  test_subtitle.py  test_subtitle_translator.py  test_thumbnail.py  test_tts.py  test_validate.py  test_video.py  test_vrm.py
(+33 files in other folders)
