[project]
name = "lobby"
version = "0.1.0"
description = "AI VTuber配信・収録ソフト（OpenClaw連携）"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Watari AI", email = "watari.secretary@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["vtuber", "ai", "live2d", "streaming", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
tts = [
    "openai>=1.10.0",  # For Qwen3-TTS and other OpenAI-compatible TTS
]
live2d = [
    "pillow>=10.0.0",
]

[project.scripts]
lobby = "backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
